--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     height: 100vh;
     overflow: hidden;
     margin: 0;
-    background-image: url('/MandyCards/images/background.jpg');
+    background-image: url('images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
