--- a/style.css
+++ b/style.css
@@ -72,3 +72,23 @@ a:hover {
         display: none;
     }
 }
+
+@media (max-width: 480px) {
+    body {
+    font-size: 16px;
+    }
+    .container {
+    flex-direction: column;
+    width: 100%;
+    }
+    .panel {
+    height: 50vh;
+    margin: 5px;
+    flex: 1;
+    }
+    .panel h3 {
+    font-size: 30px;
+    bottom: 50px;
+    left: 20px;
+    }
+}
